# mcp-audit

./: .gitignore  README.md  pyproject.toml
mcp_audit/: __init__.py  cli.py  detectors.py  fixer.py  reporter.py  scanner.py
