[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-audit"
version = "0.1.0"
description = "Security scanner for Claude Code MCP configurations. Finds hardcoded tokens in ~/.claude.json"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["claude", "mcp", "security", "secrets", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
mcp-audit = "mcp_audit.cli:main"

[project.urls]
Homepage = "https://github.com/mattiacalastri/mcp-audit"
Issues   = "https://github.com/mattiacalastri/mcp-audit/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_audit*"]
